fix logo name bug on mobile

--- a/blog_source/css/matery.css
+++ b/blog_source/css/matery.css
@@ -248,7 +248,7 @@ header .brand-logo .logo-img {
 }
 
 header .brand-logo .logo-span {
-	font-size: 2rem;
+	font-size: 1.8rem;
 }
 
 header .button-collapse i {
